using UnityEngine;

public interface IMovable
{
    Transform transform { get; }
}
