@startuml ClassDiagram
' v2025.07.29
' ステレオタイプの色設定
skinparam class {
    BackgroundColor<<MonoBehaviour>> LightBlue
    BackgroundColor<<ScriptableObject>> LightGreen
    BackgroundColor<<Interface>> LightYellow
    BackgroundColor<<static>> LightGray
    BackgroundColor<<struct>> LightPink
    BackgroundColor<<enum>> LightCoral
}

' --- インターフェース定義 ---
interface IMovable <<Interface>> {
    +transform : Transform
}
interface IShootable <<Interface>> {
    +InstantiateProperty(GameEntity, Vector3, Quaternion)
}

' --- マネージャー ---
class SystemManager <<MonoBehaviour>> {
    + {static} Instance : SystemManager
}
class DanmakuGameManager <<MonoBehaviour>> {
    + {static} Instance : DanmakuGameManager
    +GameOver()
}

' --- エンティティ基盤 ---
abstract class GameEntityController <<MonoBehaviour>> {
    #_entity : GameEntity
    +Property : GameEntityProperty
    +ParentActor : GameEntityController
    #_cancellationTokenSource : CancellationTokenSource
    +Initialize(GameEntity)
    #OnDestroy()
}
IMovable <|.. GameEntityController
IShootable <|.. GameEntityController

class GameEntity <<ScriptableObject>> {
    +Prefab : GameObject
    #property : GameEntityProperty
}
GameEntityController o-- GameEntity : " _entity"

class GameEntityProperty <<ScriptableObject>> {
    +ShootPattern : PatternBase
    +MovePattern : PatternBase
}
GameEntity o-- "1" GameEntityProperty : " property"


' --- Player ---
class PlayerController <<MonoBehaviour>> {
    -hitboxMarker : GameObject
    +OnMove(InputValue)
    +OnShot(InputValue)
    +OnSlowMove(InputValue)
    +OnHit()
}
GameEntityController <|-- PlayerController
PlayerController ..> DanmakuGameManager : "calls GameOver"

class Player <<ScriptableObject>> {
    +PlayerProperty : PlayerProperty
}
GameEntity <|-- Player

class PlayerProperty <<ScriptableObject>> {
    +MoveSpeed : float
    +MoveSpeedSlow : float
    +MovableArea : Rect
    +ShotInterval : float
    +ShotPatternNormal : PatternBase
    +ShotPatternSlow : PatternBase
}
GameEntityProperty <|-- PlayerProperty
PlayerProperty o-- "shotPatternNormal" PatternBase
PlayerProperty o-- "shotPatternSlow" PatternBase
PlayerController ..> PlayerProperty : "uses"


' --- Enemy ---
class EnemyController <<MonoBehaviour>> {
    +MaxHealth : float
    +CurrentHealth : float
    +HealthPercentage : float
    +OnHealthChanged : UnityAction<float, float>
    +TakeDamage(float)
    -Die()
}
GameEntityController <|-- EnemyController

class Enemy <<ScriptableObject>> {
    +PropertyTyped : EnemyProperty
}
GameEntity <|-- Enemy

class EnemyProperty <<ScriptableObject>> {
    +MaxHealth : int
}
GameEntityProperty <|-- EnemyProperty
EnemyController ..> EnemyProperty : "uses"


' --- Bullet ---
class BulletController <<MonoBehaviour>> {
    - _isPlayerShot : bool
    +Initialize(GameEntity, GameEntityController)
}
GameEntityController <|-- BulletController
BulletController ..> EnemyController : "calls TakeDamage"
BulletController ..> PlayerController : "calls OnHit (via trigger)"

class Bullet <<ScriptableObject>> {
    + {new} Property : BulletProperty
}
GameEntity <|-- Bullet

class BulletProperty <<ScriptableObject>> {
    +LifeTime : float
    +AttackPower : float
}
GameEntityProperty <|-- BulletProperty
BulletController ..> BulletProperty : "uses"


' --- パターン関連 ---
abstract class PatternBase <<ScriptableObject>> {
    -_beforeAwaitSeconds : float
    -_afterAwaitSeconds : float
    +Execute(GameEntityController, CancellationToken) : UniTask
    + {abstract} ExecuteImpl(GameEntityController, CancellationToken) : UniTask
}
GameEntityProperty o-- "ShootPattern" PatternBase
GameEntityProperty o-- "MovePattern" PatternBase
PatternBase ..> GameEntityController : "uses"

abstract class MovePatternBase <<ScriptableObject>> {
    + {abstract} ExecuteMove(GameEntityController, CancellationToken) : UniTask
}
PatternBase <|-- MovePatternBase
class StraightMovePattern <<ScriptableObject>>
class CurveMovePattern <<ScriptableObject>>
class SatelliteMovePattern <<ScriptableObject>>
MovePatternBase <|-- StraightMovePattern
MovePatternBase <|-- CurveMovePattern
MovePatternBase <|-- SatelliteMovePattern

abstract class ShootPatternBase <<ScriptableObject>> {
    #_entity : GameEntity
    #emissionShape : EmissionShape
    +ExecuteShoot(GameEntityController, CancellationToken) : UniTask
    + {abstract} ExecuteShootFromPoint(GameEntityController, EmissionData, CancellationToken) : UniTask
}
PatternBase <|-- ShootPatternBase
ShootPatternBase o-- EmissionShape : "emissionShape"

class BasicShotPattern <<ScriptableObject>>
class MultiWayPattern <<ScriptableObject>>
class RotatingShotPattern <<ScriptableObject>>
class ScatteringPattern <<ScriptableObject>>
ShootPatternBase <|-- BasicShotPattern
ShootPatternBase <|-- MultiWayPattern
ShootPatternBase <|-- RotatingShotPattern
ShootPatternBase <|-- ScatteringPattern

' --- コンポジットパターン ---
class LoopPattern <<ScriptableObject>>
class ParallelPattern <<ScriptableObject>>
class SequencePattern <<ScriptableObject>>
PatternBase <|-- LoopPattern
PatternBase <|-- ParallelPattern
PatternBase <|-- SequencePattern
LoopPattern o-- "1" PatternBase : "pattern"
ParallelPattern o-- "*" PatternBase : "patterns"
SequencePattern o-- "*" PatternBase : "sequence"

' --- 単独パターン ---
class FireAndForgetPattern <<ScriptableObject>>
class ForgetPattern <<ScriptableObject>>
PatternBase <|-- FireAndForgetPattern
PatternBase <|-- ForgetPattern

' --- 発生源シェイプ ---
abstract class EmissionShape <<ScriptableObject>> {
    #sharedAngle : SharedAngle
    #angleMode : AngleMode
    + {abstract} GetEmissions(IMovable) : IEnumerable<EmissionData>
}
class PointEmissionShape <<ScriptableObject>>
class LineEmissionShape <<ScriptableObject>>
class PlaneEmissionShape <<ScriptableObject>>
EmissionShape <|-- PointEmissionShape
EmissionShape <|-- LineEmissionShape
EmissionShape <|-- PlaneEmissionShape

' --- 共有リソース関連 ---
abstract class SharedResource <<ScriptableObject>> {
    + {abstract} Reset()
}
abstract class "SharedResource<T>" as SharedResource_T <<ScriptableObject>> {
    +Value : T
    +Reset()
}
class SharedAngle <<ScriptableObject>>
SharedResource <|-- SharedResource_T
SharedResource_T <|-- SharedAngle
note right of SharedAngle : T = float

MultiWayPattern ..> SharedAngle : "uses (optional)"
RotatingShotPattern ..> SharedAngle : "uses (optional)"
EmissionShape o-- SharedAngle : "sharedAngle"

' --- その他 ---
class EnemyLifeGaugeController <<MonoBehaviour>> {
    +Initialize(EnemyController)
    -UpdateLifeGauge(float, float)
}
struct EmissionData <<struct>> {
    +localPosition : Vector3
    +localAngle : float
}
class AngleUtility <<static>> {
    + {static} GetAngleToTarget(Vector3, Vector3, float) : float
    + {static} GetAngleToPlayer(Vector3, float) : float
}
enum RotationDirection <<enum>> {
    CounterClockwise
    Clockwise
}
note top of RotationDirection : namespace TouhouSpellUp.Danmaku

EnemyController ..> EnemyLifeGaugeController : "creates"
EnemyLifeGaugeController ..> EnemyController : "observes (OnHealthChanged)"
ShootPatternBase ..> EmissionData : "creates"
AngleUtility ..> PlayerController : "finds"

@enduml
